--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div style="text-align:center">
+  <h1>
+    {{title}}!
+  </h1>
+
+  <app-view-list> </app-view-list>
+
+
+</div>
